--- a/style.css
+++ b/style.css
@@ -21,7 +21,10 @@
     --clr-white: #fff;
     --clr-font-head:#131022;
     --clr-font-p:#585c7b;
-    --clr-bg: #F3F6FF
+    --clr-bg: #F3F6FF;
+    --clr-card-bg: hsla(239, 84%, 67%, 0.08);
+    --clr-btn-bg:#F3F6FF;
+    --clr-border:#E2E5F1;
 }
 
 *{
@@ -63,6 +66,11 @@ h1{
   color-scheme: dark;
   --clr-font-head:#ffffff;
   --clr-font-p:hsla(0, 0%, 100%, 0.7);
+  --clr-card-bg: hsla(239, 84%, 67%, 0.08);
+  --clr-grey1:hsla(225, 100%, 98%, 0.048);
+  --clr-btn-text:#f3f6ff;
+  --clr-btn-bg:hsla(0, 0%, 100%, 0.05);
+  --clr-border:hsla(0, 0%, 100%, 0.15);
 
   .darkmode-only{
     display:block
@@ -70,7 +78,9 @@ h1{
   .lightmode-only{
     display:none;
   }
-
+  .review-img-dark{
+    margin-right:1.5rem;
+  }
 }
 
 /* FÖLJANDE KOD SNODD FRÅN https://www.w3schools.com/howto/howto_css_switch.asp */
@@ -313,12 +323,6 @@ cursor: pointer;
   justify-content: center;
   align-items: center;
   gap: .5rem;
-  
-  button{
-    border:none;
-    background-color: transparent;
-  }
-
 }
 
 textarea{
@@ -368,11 +372,13 @@ textarea{
   place-content: center;
   align-items: center;
 }
-.kortico{
+
+.small-card{
   grid-row: 1 / 3;
   margin-bottom:50px;
-
-
+  background-color: var(--clr-card-bg) ;
+  padding:1rem;
+  border-radius: .5rem;
 }
 .korth1{
 grid-column: 2;
@@ -517,43 +523,33 @@ font-size: 16px;
   text-align: start;
 }
 
-.faqbtrv{
-  border:none;
-  background-color: transparent;
-}
-.faq1{
-  
-  border-bottom: 1px solid #e2e5f1;
-  padding:0.5rem;
-  label{
-    font-size: 16px;
-    font-weight: 600 ;
-    color:var(--clr-font1);
-    padding-left:1rem;
-    margin:0 0;
-  }
-  p{
-
-    font-size: 14px;
-    font-weight: 400 ;
-    color:var(--clr-font2);
-    padding:1rem;}
-
-}
-.faq1b{
-  border-bottom: 1px solid #e2e5f1;  
-  display:grid;
-  grid-template-columns: 1fr auto;
+.faqbt-expanded{
+  display: flex;
   align-items: center;
   justify-content: center;
+  border:none;
+  background-color: var(--clr-brandbtn);
+  border-radius: 50%;
+  padding:1rem;
+  height: 36px;
+  width: 36px;
 
 }
-.faq2{
-  border-bottom: 1px solid #e2e5f1;  
-  display:grid;
-  grid-template-columns: 1fr auto;
-  padding:0.5rem;
+.faqbt-closed{
+  display: flex;
   align-items: center;
+  justify-content: center;
+  border:none;
+  background-color: var(--clr-btn-bg);
+  border-radius: 50%;
+  padding:1rem;
+  height: 36px;
+  width: 36px;
+}
+.faq-expanded{
+  border-bottom: 1px solid var(--clr-border);
+  flex-direction: column;
+  gap:1rem;
   label{
     font-size: 16px;
     font-weight: 600 ;
@@ -561,57 +557,28 @@ font-size: 16px;
     padding-left: 1rem;
     margin:0;
   }
-  
+  p{
+    padding: 1rem;
+    margin:0;    
+    text-align: start;
+    font-size: 14px;
+  }
+  .faq1b{
+    display:grid;
+    grid-template-columns: 1fr auto;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 1px solid var(--clr-border);   
+    padding-right:.5rem;
+  }
+
 }
-.faq3{
-  border-bottom: 1px solid #e2e5f1;  
+.faq-close{
   display:grid;
   grid-template-columns: 1fr auto;
   padding:0.5rem;
-  margin: 0;
-  align-items: center;
-  label{
-    font-size: 16px;
-    font-weight: 600 ;
-    color:var(--clr-font-h);
-    padding-left: 1rem;
-    margin:0;
-  }
-}
-.faq4{
-  border-bottom: 1px solid #e2e5f1;  
-  display:grid;
-  grid-template-columns: 1fr auto;
-  padding:0.5rem;
-  margin: 0;
-  align-items: center;
-  label{
-    font-size: 16px;
-    font-weight: 600 ;
-    color:var(--clr-font-h);
-    padding-left: 1rem;
-    margin:0;
-  }
-}
-#faq4{
-  display:none;
-}
-.faq5{
-  border-bottom: 1px solid #e2e5f1;  display:grid;
-  grid-template-columns: 1fr auto;
-  padding:0.5rem;
-  label{
-    font-size: 16px;
-    font-weight: 600 ;
-    color:var(--clr-font-h);
-    padding-left: 1rem;
-    margin:0;
-  }
-}
-.faq6{
-  display:grid;
-  grid-template-columns: 1fr auto;
-  padding:0.5rem;
+  border-bottom: 1px solid var(--clr-border);
+  gap:1rem;
   
   label{
     font-size: 16px;
@@ -622,13 +589,22 @@ font-size: 16px;
   }
 }
 .faqborder{
-  border: 1px solid #E2E5F1;
+  border: 1px solid var(--clr-border);
   border-radius: 0.5rem;
-  p{
-  text-align: start;
-  margin-left:0;
-}  
 }
+#faq2{
+  @media (width < 768px){
+    display:none;
+  }
+}
+
+#faq3{
+  @media (width > 768px){
+    display:none;
+  }
+}
+
+
 .c6{
   background-color: var(--clr-grey1);
   border-radius: 0.5em;
@@ -661,7 +637,7 @@ font-size: 16px;
     background-color: var(--clr-primary);
     align-items: center;
     text-align: center;
-    color: var(--clr-font-h);
+    color: var(--clr-btn-text);
     border-radius: 0rem .5rem .5rem 0rem;
     text-decoration: none;
     padding: 12px 25px;
@@ -674,6 +650,8 @@ font-size: 16px;
   padding-left:1rem;
   width: 219px;
   height: 51px;
+  background-color: #ffffff;
+  color: var(--clr-grey5);
 }
 
 .textbox-sub{
@@ -696,14 +674,12 @@ font-size: 16px;
 }
 .contactbtn{
   background-color: var(--clr-primary);
-  align-items: center;
   text-align: center;
-  color: var(--clr-font-p);
+  color: var(--clr-btn-text);
   border-radius: 8px;
   text-decoration: none;
   padding: 12px 25px;
   border:none;
-  place-content: center;
 }
 
 .fotnot{
@@ -713,12 +689,9 @@ font-size: 16px;
   justify-content: center;
   text-align: center;
   padding-bottom: 4rem;
-  
-  
- 
+  color: var(--clr-grey6);
   p{
     margin: 0.2rem;
-    color: var(--clr-grey6);
     font-weight: 400;
     font-size: 14px;
   }
@@ -912,6 +885,7 @@ font-size: 16px;
   .phone-only{
     display:none;
   }
+  
   .c5{
     .c4-1{
       margin: 0 auto;
@@ -990,7 +964,9 @@ font-size: 16px;
 @media (width > 1400px){
   .container{ 
     max-width: 1320px;}
-
+  .desktop-only{
+    display:block;
+  }
 
   .c1{
       display: grid;
@@ -1146,7 +1122,7 @@ font-size: 16px;
   
   
   }
-    .desktop-review{
+  .desktop-review{
     padding-bottom: 5rem;
     display:grid;
     grid-template-columns: 1fr;
@@ -1224,36 +1200,32 @@ font-size: 16px;
           grid-column: 1 / 3;
         }
         #grid-card1{
-          display: flex;
-          flex-direction: column;
           grid-row:2;
           grid-column:1 / 2;
-          img{
-            margin-bottom: 1rem;
-            margin-left:0;
-          }
-          p{
-            margin-left:0;
-          }
+
         }
         #grid-card2{
-          
-          display: flex;
-          flex-direction: column;
           grid-row:2;
           grid-column:2;
-          img{
-            margin-bottom: 1rem;
-            margin-left:0;
-          }
-          p{
-            margin-left:0;
-          } 
         }
         button{
           grid-row:3;
           margin-left:0;
           border:none;
+        }
+        .kort1{
+          display:flex;
+          flex-direction: column;
+          justify-content: start;
+          align-items: start;
+          gap:1rem;
+          .kortp{
+            margin-left:0;
+          }
+          .small-card{
+            margin:0;
+
+          }
         }
 
       }
