--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 :root {
-  --clr-gradient: linear-gradient(to top, rgba(10, 11, 71, 0.1), rgba(218, 70, 239, 5%), rgba(241, 244, 253, 7%));
+  --clr-gradient: linear-gradient(to top, rgba(99, 102, 241, 10%), rgba(218, 70, 239, 5%), rgba(241, 244, 253, 7%));
   --color-white:#ffffff;
   --color-dark: #0B0F19;
   --color-primary: #6366F1;
@@ -20,9 +20,9 @@
   --color-primary: #6366F1;
   --color-border: #E2E5F1;
   --color-text: #0B0F19;
-  --color-text2:#565973;
+  --color-text2:hsla(0, 0%, 100%, 0.7);
   --color-text3:#9397AD;
-  --color-bg:#F3F6FF;
+  --color-bg:hsla(0, 0%, 100%, 0.04);
   --color-bg-grey:hsla(239, 84%, 67%, 0.08);
   --color-shadow:rgba(0, 0, 0, 0.2);
 }
