--- a/css/scss/Color/_color.scss
+++ b/css/scss/Color/_color.scss
@@ -22,9 +22,9 @@
     --color-primary: #6366F1;
     --color-border: #E2E5F1;
     --color-text: #0B0F19;
-    --color-text2:#565973;
+    --color-text2:hsla(0, 0%, 100%, 0.7);
     --color-text3:#9397AD;
-    --color-bg:#F3F6FF;
+    --color-bg:hsla(0, 0%, 100%, 0.04);
     --color-bg-grey:hsla(239, 84%, 67%, 0.08);
     --color-shadow:rgba(0, 0, 0, 0.2);
     .btn-store{
